--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,10 @@ paginate: 5
 paginate_path: "blog/page:num"
 
 gems:
- - jekyll-mentions
  - jemoji
 
 # BUILD SETTINGS
-markdown: kramdown
+markdown: redcarpet
 highlighter: pygments
 sass:
   sass_dir: _sass
