--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,9 @@ default:
   layout: post
   title: Frontmatter missing
 
+post:
+  extension: md
+
 # MY WEIRD HACKS
 fork_post_url: "https://github.com/Ashton-W/Ashton-W.github.io/blob/master"
 
