--- a/_config.yml
+++ b/_config.yml
@@ -43,10 +43,10 @@ gems:
  - jemoji
 
 # BUILD SETTINGS
-markdown: redcarpet
-redcarpet:
-  extensions: ["no_intra_emphasis"]
-highlighter: pygments
+markdown: kramdown
+kramdown:
+  input: GFM
+  hard_wrap: false
 sass:
   sass_dir: _sass
   style: :compressed
