Use jekyll-feed
Signed-off-by: Ashton Williams <Ashton-W@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -42,10 +42,13 @@ theme:
 twitter:
   username: AshtonDev
 
+logo: 
+
 gems:
  - jemoji
  - jekyll-gist
  - jekyll-seo-tag
+ - jekyll-feed
 
 # BUILD SETTINGS
 markdown: kramdown
